# simple-ray-tracer

./: CMakeLists.txt  README.md  img
src/: color.h  fresnel.cpp  fresnel.h  main.cpp  ray.h  sphere.h  trace.cpp  trace.h  vec.h
